[gd_scene load_steps=28 format=2]

[ext_resource path="res://sprites/act3settings/desk1.png" type="Texture" id=1]
[ext_resource path="res://sprites/Act1settings/sceneone/dark filter.png" type="Texture" id=2]
[ext_resource path="res://sprites/act3settings/shelf1.png" type="Texture" id=3]
[ext_resource path="res://sprites/act3settings/homewall.png" type="Texture" id=4]
[ext_resource path="res://sprites/act3settings/shelf2.png" type="Texture" id=5]
[ext_resource path="res://sprites/act3settings/stairs.png" type="Texture" id=6]
[ext_resource path="res://sprites/act3settings/light.png" type="Texture" id=7]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/UI/dialoguebox.png" type="Texture" id=9]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://act3/scene2/book.gd" type="Script" id=11]
[ext_resource path="res://sprites/UI/continuesprite.png" type="Texture" id=12]
[ext_resource path="res://act3/scene2/book2.gd" type="Script" id=13]
[ext_resource path="res://act3/scene2/book3.gd" type="Script" id=14]
[ext_resource path="res://act3/scene2/book4.gd" type="Script" id=15]
[ext_resource path="res://act3/scene2/library.gd" type="Script" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 613.509, 898.557 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 620.224, -0.25, 0, 0.25, 0, 620.224, -0.25, 0, 0.25, 0, 620.224, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 9.07288, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0, 9.07288, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=6]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 620.224, -0.25, 0, 0.25, 0, 620.224, -0.25, 0, 0.25, 0, 620.224, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 9.07288, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0, 9.07288, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=7]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 620.224, -0.25, 0, 0.25, 0, 620.224, -0.25, 0, 0.25, 0, 620.224, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 9.07288, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0, 9.07288, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=8]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 620.224, -0.25, 0, 0.25, 0, 620.224, -0.25, 0, 0.25, 0, 620.224, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 9.07288, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0, 9.07288, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 133.378, 1459.76 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6718.83, 415.299 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 512.161, 1810.08 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 16 )

[node name="background" type="Area2D" parent="."]

[node name="wall1" type="Sprite" parent="background"]
position = Vector2( 1841.37, 1091.67 )
scale = Vector2( 1, 1.14614 )
z_index = -1
texture = ExtResource( 4 )

[node name="wall2" type="Sprite" parent="background"]
position = Vector2( 5665.41, 1104.82 )
scale = Vector2( 1, 1.14614 )
z_index = -1
texture = ExtResource( 4 )

[node name="wall3" type="Sprite" parent="background"]
position = Vector2( 9338.4, 1117.98 )
scale = Vector2( 1, 1.14614 )
z_index = -1
texture = ExtResource( 4 )

[node name="floor1" type="Sprite" parent="background"]
position = Vector2( 1210.05, 1262.66 )
z_index = -1
texture = ExtResource( 6 )

[node name="floor2" type="Sprite" parent="background"]
position = Vector2( 4902.06, 1275.25 )
z_index = -1
texture = ExtResource( 6 )
flip_h = true

[node name="floor3" type="Sprite" parent="background"]
position = Vector2( 7879.98, 3019.1 )
z_index = -1
texture = ExtResource( 6 )
flip_v = true

[node name="floor4" type="Sprite" parent="background"]
position = Vector2( 11654.3, 3010.64 )
z_index = -1
texture = ExtResource( 6 )
flip_h = true
flip_v = true

[node name="Sprite" type="Sprite" parent="background"]
position = Vector2( 2124.13, 1905.56 )
scale = Vector2( 2.67973, 2.15634 )
z_index = 2
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="background"]
position = Vector2( 4591.95, 1870.41 )
scale = Vector2( 2.67973, 2.15634 )
z_index = 2
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="background"]
position = Vector2( 6926.18, 1849.32 )
scale = Vector2( 2.67973, 2.15634 )
z_index = 2
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="background"]
position = Vector2( 6046.43, 1075.97 )
scale = Vector2( 3.84824, 1 )
z_index = 3
texture = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="background"]
position = Vector2( 4734.55, 919.705 )
scale = Vector2( 13.64, 6.97236 )
z_index = 2
texture = ExtResource( 7 )
flip_h = true

[node name="Sprite5" type="Sprite" parent="background"]

[node name="player" parent="." instance=ExtResource( 8 )]
position = Vector2( 3579.14, 1639.09 )

[node name="Camera2D2" type="Camera2D" parent="player"]
current = true
limit_left = 0
limit_top = 0
limit_right = 9338
limit_bottom = 2160

[node name="book" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="book"]
position = Vector2( 1501.45, 1125.7 )
z_index = -1
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="book"]
position = Vector2( 1515.65, 1076.91 )
shape = SubResource( 2 )

[node name="dialoguebox" type="Control" parent="book"]
margin_left = 744.187
margin_top = 1312.05
margin_right = 784.187
margin_bottom = 1352.05
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Type" type="AudioStreamPlayer" parent="book/dialoguebox"]

[node name="TextureRect" type="TextureRect" parent="book/dialoguebox"]
margin_right = 1500.0
margin_bottom = 500.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="book/dialoguebox"]
margin_left = 95.7639
margin_top = 86.2349
margin_right = 1393.76
margin_bottom = 420.235
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="book/dialoguebox"]

[node name="continuesprite" type="Sprite" parent="book/dialoguebox"]
position = Vector2( 620.224, 80 )
scale = Vector2( 1.20209, 1.88708 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="book/dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 4 )

[node name="Label" type="Label" parent="book"]
margin_left = 1252.38
margin_top = 1029.6
margin_right = 1784.38
margin_bottom = 1129.6
custom_fonts/font = SubResource( 5 )
text = "Read (space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="book2" type="Area2D" parent="."]
position = Vector2( 2113.93, 0 )
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="book2"]
position = Vector2( 1501.45, 1125.7 )
z_index = -1
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="book2"]
position = Vector2( 1515.65, 1076.91 )
shape = SubResource( 2 )

[node name="dialoguebox" type="Control" parent="book2"]
margin_left = 791.822
margin_top = 1306.03
margin_right = 831.822
margin_bottom = 1346.03
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Type" type="AudioStreamPlayer" parent="book2/dialoguebox"]

[node name="TextureRect" type="TextureRect" parent="book2/dialoguebox"]
margin_right = 1500.0
margin_bottom = 500.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="book2/dialoguebox"]
margin_left = 95.7639
margin_top = 86.2349
margin_right = 1393.76
margin_bottom = 420.235
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="book2/dialoguebox"]

[node name="continuesprite" type="Sprite" parent="book2/dialoguebox"]
position = Vector2( 620.224, 80 )
scale = Vector2( 1.20209, 1.88708 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="book2/dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 6 )

[node name="Label" type="Label" parent="book2"]
margin_left = 1267.52
margin_top = 996.127
margin_right = 1799.52
margin_bottom = 1096.13
custom_fonts/font = SubResource( 5 )
text = "Read (space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="book3" type="Area2D" parent="."]
position = Vector2( 4168.03, -9.97119 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="book3"]
position = Vector2( 1501.45, 1125.7 )
z_index = -1
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="book3"]
position = Vector2( 1515.65, 1076.91 )
shape = SubResource( 2 )

[node name="dialoguebox" type="Control" parent="book3"]
margin_left = 759.175
margin_top = 1310.57
margin_right = 799.175
margin_bottom = 1350.57
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Type" type="AudioStreamPlayer" parent="book3/dialoguebox"]

[node name="TextureRect" type="TextureRect" parent="book3/dialoguebox"]
margin_right = 1500.0
margin_bottom = 500.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="book3/dialoguebox"]
margin_left = 95.7639
margin_top = 86.2349
margin_right = 1393.76
margin_bottom = 420.235
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="book3/dialoguebox"]

[node name="continuesprite" type="Sprite" parent="book3/dialoguebox"]
position = Vector2( 620.224, 80 )
scale = Vector2( 1.20209, 1.88708 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="book3/dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 7 )

[node name="Label" type="Label" parent="book3"]
margin_left = 1242.21
margin_top = 1011.26
margin_right = 1774.21
margin_bottom = 1111.26
custom_fonts/font = SubResource( 5 )
text = "Read (space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="book4" type="Area2D" parent="."]
position = Vector2( 6431.53, -19.9426 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="book4"]
position = Vector2( 1501.45, 1125.7 )
z_index = -1
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="book4"]
position = Vector2( 1515.65, 1076.91 )
shape = SubResource( 2 )

[node name="dialoguebox" type="Control" parent="book4"]
margin_left = 772.255
margin_top = 1305.05
margin_right = 812.255
margin_bottom = 1345.05
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Type" type="AudioStreamPlayer" parent="book4/dialoguebox"]

[node name="TextureRect" type="TextureRect" parent="book4/dialoguebox"]
margin_right = 1500.0
margin_bottom = 500.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="book4/dialoguebox"]
margin_left = 95.7639
margin_top = 86.2349
margin_right = 1393.76
margin_bottom = 420.235
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="book4/dialoguebox"]

[node name="continuesprite" type="Sprite" parent="book4/dialoguebox"]
position = Vector2( 620.224, 80 )
scale = Vector2( 1.20209, 1.88708 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="book4/dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 8 )

[node name="Label" type="Label" parent="book4"]
margin_left = 1260.45
margin_top = 1000.58
margin_right = 1792.45
margin_bottom = 1100.58
custom_fonts/font = SubResource( 5 )
text = "Read (space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -18.0647, 1124.53 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 11189.7, 886.946 )
shape = SubResource( 9 )

[node name="floor" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 4447.38, 2413.34 )
shape = SubResource( 10 )

[node name="exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
position = Vector2( 11354.9, 927.343 )
shape = SubResource( 11 )
[connection signal="body_entered" from="book" to="book" method="_on_book_body_entered"]
[connection signal="body_exited" from="book" to="book" method="_on_book_body_exited"]
[connection signal="tween_completed" from="book/dialoguebox/Tween" to="book" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="book2" to="book2" method="_on_book2_body_entered"]
[connection signal="body_exited" from="book2" to="book2" method="_on_book2_body_exited"]
[connection signal="tween_completed" from="book2/dialoguebox/Tween" to="book2" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="book3" to="book3" method="_on_book3_body_entered"]
[connection signal="body_exited" from="book3" to="book3" method="_on_book3_body_exited"]
[connection signal="tween_completed" from="book3/dialoguebox/Tween" to="book3" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="book4" to="book4" method="_on_book4_body_entered"]
[connection signal="body_exited" from="book4" to="book4" method="_on_book4_body_exited"]
[connection signal="tween_completed" from="book4/dialoguebox/Tween" to="book4" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="exit" to="." method="_on_exit_body_entered"]
